---
source: quic/s2n-quic-transport/src/space/rx_packet_numbers/ack_manager.rs
expression: "Simulation{network:\n               Network{client:\n                           Application::new(Endpoint::new(AckSettings{max_ack_delay:\n                                                                          Duration::from_millis(25),\n                                                                      ack_delay_exponent:\n                                                                          1,}),\n                                            [Duration::from_millis(5)].iter().cycle().take(100).cloned()).into(),\n                       server:\n                           Application::new(Endpoint::new(AckSettings{max_ack_delay:\n                                                                          Duration::from_millis(100),\n                                                                      ack_delay_exponent:\n                                                                          1,}),\n                                            [Duration::from_millis(5)].iter().cycle().take(100).cloned()).into(),},\n           events: empty().collect(),\n           delay: Duration::from_millis(1000),}.run()"
---
Report {
    client: EndpointReport {
        pending_ack_ranges: AckRanges(
            {
                PacketNumber(
                    ApplicationData,
                    100,
                )..=PacketNumber(
                    ApplicationData,
                    115,
                ),
            },
        ),
        total_transmissions: 123,
        ack_eliciting_transmissions: 104,
        ack_transmissions: 23,
        congested_transmissions: 0,
        dropped_transmissions: 0,
        delayed_transmissions: 0,
        processed_transmissions: 123,
    },
    server: EndpointReport {
        pending_ack_ranges: AckRanges(
            {
                PacketNumber(
                    ApplicationData,
                    119,
                )..=PacketNumber(
                    ApplicationData,
                    122,
                ),
            },
        ),
        total_transmissions: 116,
        ack_eliciting_transmissions: 103,
        ack_transmissions: 16,
        congested_transmissions: 0,
        dropped_transmissions: 0,
        delayed_transmissions: 0,
        processed_transmissions: 116,
    },
    iterations: 238,
}
